--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>site teste</title>
+    <style>
+        header{
+            height: 100%;
+            width: 100px;
+            background-color: grey;
+        }
+    </style>
 </head>
 <body>
     <header>
