--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         header{
             height: 100%;
-            width: 100px;
+            width: 100%;
             background-color: grey;
         }
     </style>
